added previews of projects

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Jane Doe | Portfolio</title>
+    <title>Peter Gish | Portfolio</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -56,24 +56,15 @@
     <header class="masthead bg-primary text-white text-center">
         <div class="container">
             <img class="img-fluid mb-5 d-block mx-auto rounded-circle" src="assets/img/jane.jpg" alt="" />
-            <h1 class="mb-0">Hi, I'm Jane!</h1>
+            <h1 class="mb-0">Hi, I'm Peter!</h1>
             <hr />
             <h2 class="mb-0">
-                Web Developer - User Experience Designer - JavaScript
-                Enthusiast
+                Software Engineer - Data Scientist - Machine Learning Enthusiast
             </h2>
 
             <!-- Replace this text with your brand statement or other short text about you. -->
             <p class="brand-statement">
-                I'm a brand statement - Lorem ipsum dolor sit amet,
-                consectetur adipiscing elit. Curabitur dignissim efficitur
-                congue. Vestibulum vestibulum sit amet magna sit amet
-                maximus. Praesent viverra ut massa vitae condimentum. Nulla
-                condimentum eros vitae semper sagittis. Donec quis neque at
-                risus luctus pulvinar. Curabitur enim sem, sodales eget nisi
-                non, euismod tempor quam. Fusce est tortor, condimentum
-                porttitor ligula sit amet, fermentum vestibulum sem. Vivamus
-                venenatis felis ac fringilla viverra.
+                Applied Scientist, educated in supervised and unsupervised ML systems. Fluent in Java and C++. Proficient in Python, C, and Linux and professional experience with autonomous systems. I was on a team that developed a SLAM-equipped rover platform to navigate indoors and guide visually-impaired individuals via voice commands. Designed test programs for NVIDIA's in-car autonomous vehicle system. I am preparing to be a full-time applied scientist designing ML models. My experience with autonomous systems and Berkley's Data Analytics Bootcamp has given me the foundation to build my career.
             </p>
         </div>
     </header>
@@ -92,66 +83,66 @@
                     <a class="portfolio-item d-block mx-auto" data-toggle="modal" data-target="#portfolio-modal-1">
                         <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                             <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                                <p>Project #1</p>
+                                <p>PyBer Analysis</p>
                                 <i class="fas fa-search-plus fa-2x"></i>
                             </div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/project1.jpg" alt="" />
+                        <img class="img-fluid" src="assets/img/portfolio/PyBer_Challenge.jpg" alt="" />
                     </a>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <a class="portfolio-item d-block mx-auto" data-toggle="modal" data-target="#portfolio-modal-2">
                         <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                             <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                                <p>Project #2</p>
+                                <p>WeatherPy</p>
                                 <i class="fas fa-search-plus fa-2x"></i>
                             </div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/project2.jpg" alt="" />
+                        <img class="img-fluid" src="assets/img/portfolio/WeatherPy.jpg" alt="" />
                     </a>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <a class="portfolio-item d-block mx-auto" data-toggle="modal" data-target="#portfolio-modal-3">
                         <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                             <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                                <p>Project #3</p>
+                                <p>Mission to Mars</p>
                                 <i class="fas fa-search-plus fa-2x"></i>
                             </div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/project3.jpg" alt="" />
+                        <img class="img-fluid" src="assets/img/portfolio/Mars.jpg" alt="" />
                     </a>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <a class="portfolio-item d-block mx-auto" data-toggle="modal" data-target="#portfolio-modal-4">
                         <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                             <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                                <p>Project #4</p>
+                                <p>Pewlett Hackard Analysis</p>
                                 <i class="fas fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/project4.jpg" alt="" />
+                        <img class="img-fluid" src="assets/img/portfolio/Pewlett_Hackard.jpg" alt="" />
                     </a>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <a class="portfolio-item d-block mx-auto" data-toggle="modal" data-target="#portfolio-modal-5">
                         <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                             <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                                <p>Project #5</p>
+                                <p>Surf's Up</p>
                                 <i class="fas fa-search-plus fa-2x"></i>
                             </div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/project5.jpg" alt="" />
+                        <img class="img-fluid" src="assets/img/portfolio/Surfs_Up.jpg" alt="" />
                     </a>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <a class="portfolio-item d-block mx-auto" data-toggle="modal" data-target="#portfolio-modal-6">
                         <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                             <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                                <p>Project #6</p>
+                                <p>Movies ETL</p>
                                 <i class="fas fa-search-plus fa-2x"></i>
                             </div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/project6.jpg" alt="" />
+                        <img class="img-fluid" src="assets/img/portfolio/Movies_ETL.jpg" alt="" />
                     </a>
                 </div>
             </div>
@@ -165,9 +156,7 @@
             <hr class="star-light mb-5" />
 
             <p class="about-me text-center">
-                I am an enthusiastic software developer with a passion for
-                creating beautiful web applications built on JavaScript
-                technologies.
+                I am a resourceful and resilient problem solver with experience in mechanical, computer, and software engineering
             </p>
         </div>
         <div class="container">
@@ -253,21 +242,18 @@
                         Connect with Me
                     </h2>
                     <p class="text-uppercase mb-4">
-                        myverycoolemail@gmail.com
+                        peter.gish11@gmail.com
                     </p>
                     <ul class="list-inline mb-0">
                         <li class="list-inline-item">
-                            <a class="btn-social text-center rounded-circle" href="#">
-                                <i class="fab fa-fw fa-twitter"></i>
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a class="btn-social text-center rounded-circle" href="#">
+                            <a class="btn-social text-center rounded-circle" 
+                                href="https://www.linkedin.com/in/peter-gish/">
                                 <i class="fab fa-fw fa-linkedin-in"></i>
                             </a>
                         </li>
                         <li class="list-inline-item">
-                            <a class="btn-social text-center rounded-circle" href="https://github.com/USER">
+                            <a class="btn-social text-center rounded-circle" 
+                                href="https://github.com/peterg7">
                                 <i class="fab fa-github"></i>
                             </a>
                         </li>
@@ -279,7 +265,7 @@
 
     <div class="copyright py-4 text-center text-white">
         <div class="container">
-            <small>Copyright &copy; Jane Doe 2019-2020</small>
+            <small>Copyright &copy; Peter Gish 2019-2020</small>
         </div>
     </div>
 
