--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
 
             <!-- Replace this text with your brand statement or other short text about you. -->
             <p class="brand-statement">
-                Applied Scientist, educated in supervised and unsupervised ML systems. Fluent in Java and C++. Proficient in Python, C, and Linux and professional experience with autonomous systems. I was on a team that developed a SLAM-equipped rover platform to navigate indoors and guide visually-impaired individuals via voice commands. Designed test programs for NVIDIA's in-car autonomous vehicle system. I am preparing to be a full-time applied scientist designing ML models. My experience with autonomous systems and Berkley's Data Analytics Bootcamp has given me the foundation to build my career.
+                Applied Scientist, educated in supervised and unsupervised ML systems. Fluent in Java and C++. Proficient in Python, C, and Linux with professional experience with autonomous systems. I was on a team that developed a SLAM-equipped rover platform to navigate indoors and guide visually-impaired individuals via voice commands. Designed test programs for NVIDIA's in-car autonomous vehicle system. I am preparing to be a full-time applied scientist designing ML models. My experience with autonomous systems and Berkley's Data Analytics Bootcamp has given me the foundation to build my career.
             </p>
         </div>
     </header>
@@ -200,33 +200,22 @@
             <hr class="star-dark mb-5" />
             <div class="credential">
                 <h2 class="location mb-0">
-                    Vanderbilt University |
-                    <span class="credential-date text-muted">Jan 2019 - July 2019</span>
+                    Foothill College |
+                    <span class="credential-date text-muted">Jan 2019 - June 2020</span>
                 </h2>
-                <p class="lead">Full-stack Web Development Certificate</p>
+                <p class="lead">Associate Degree in Computer Science</p>
                 <p class="credential-description">
-                    Web development is a high-growth career track, and
-                    Vanderbilt University Coding Boot Camp teaches you the
-                    specialized skills for full-stack web development.
-                    Through a fast-paced, immersive curriculum, you’ll learn
-                    in-demand front-end and back-end technologies.
+                    This degree caps off the first half of my college experience. I will be completing my Bachelor's degree in computer science at _____ in June 2022.
                 </p>
             </div>
             <hr class="credential-divider" />
             <div class="credential">
                 <h2 class="location mb-0">
-                    University of North Carolina |
-                    <span class="credential-date text-muted">Aug 2010 - May 2015</span>
+                    University of Denver |
+                    <span class="credential-date text-muted">Sep 2016 - April 2018</span>
                 </h2>
-                <p class="lead">B.A. Art History</p>
                 <p class="credential-description">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Cras non dictum justo. Donec sagittis ipsum a odio
-                    dignissim varius. Nam vitae lectus diam. Etiam efficitur
-                    venenatis quam, vitae semper justo ornare id. Sed sed
-                    posuere lorem, vitae porttitor augue. Sed sagittis
-                    sapien mauris, at varius arcu egestas ut. Praesent
-                    egestas metus id dui ultrices tincidunt.
+                    I completed two years at DU double majoring in Mechanical Engineering and Computer Science. I withdrew during the Spring quarter of my second year to pursue private research of artificial intelligence. 
                 </p>
             </div>
             <hr class="credential-divider" />
