updated portfolio modals

--- a/templates/index.html
+++ b/templates/index.html
@@ -94,11 +94,11 @@
                     <a class="portfolio-item d-block mx-auto" data-toggle="modal" data-target="#portfolio-modal-2">
                         <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                             <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                                <p>WeatherPy</p>
+                                <p>Mapping Earthquakes</p>
                                 <i class="fas fa-search-plus fa-2x"></i>
                             </div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/WeatherPy.jpg" alt="" />
+                        <img class="img-fluid" src="assets/img/portfolio/Earthquake_Mapping.jpg" alt="" />
                     </a>
                 </div>
                 <div class="col-md-6 col-lg-4">
@@ -127,11 +127,11 @@
                     <a class="portfolio-item d-block mx-auto" data-toggle="modal" data-target="#portfolio-modal-5">
                         <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                             <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                                <p>Surf's Up</p>
+                                <p>UFO Sightings</p>
                                 <i class="fas fa-search-plus fa-2x"></i>
                             </div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/Surfs_Up.jpg" alt="" />
+                        <img class="img-fluid" src="assets/img/portfolio/UFO_Sightings.jpg" alt="" />
                     </a>
                 </div>
                 <div class="col-md-6 col-lg-4">
@@ -271,21 +271,16 @@
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-secondary text-uppercase mb-0">
-                            Project Name 1
+                            PyBer Analysis
                         </h2>
                         <hr class="star-dark mb-5" />
                         <img class="img-fluid mb-5" src="img/portfolio/project1.jpg" alt="" />
                         <p class="mb-5">
-                            Lorem ipsum dolor sit amet, consectetur
-                            adipisicing elit. Mollitia neque assumenda ipsam
-                            nihil, molestias magnam, recusandae quos quis
-                            inventore quisquam velit asperiores, vitae?
-                            Reprehenderit soluta, eos quod consequuntur
-                            itaque. Nam.
+                            A Python-based ride sharing app needs analysis on the company's profits and customer demographics. With two data files, one of city data and one of ride data, the task is to perform stastical analysis that can give the company market information and present it in a visually appealing way. Python in combination with Pandas and Matplotlib are used to accomplish this job.
                         </p>
                         <a class="btn btn-primary portfolio-modal-dismiss" href="#">
                             Live Demo</a>
-                        <a class="btn btn-primary portfolio-modal-dismiss" href="#">
+                        <a class="btn btn-primary portfolio-modal-dismiss" href="https://github.com/peterg7/PyBer_Analysis_GISH">
                             View Code</a>
                     </div>
                 </div>
@@ -303,23 +298,18 @@
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-secondary text-uppercase mb-0">
-                            Project Name
+                            Mapping Earthquakes
                         </h2>
                         <hr class="star-dark mb-5" />
                         <img class="img-fluid mb-5" src="img/portfolio/project2.jpg" alt="" />
                         <p class="mb-5">
-                            Lorem ipsum dolor sit amet, consectetur
-                            adipisicing elit. Mollitia neque assumenda ipsam
-                            nihil, molestias magnam, recusandae quos quis
-                            inventore quisquam velit asperiores, vitae?
-                            Reprehenderit soluta, eos quod consequuntur
-                            itaque. Nam.
+                            MapBox, a company that providees custom maps for websites and applications, supplies APIs to create interactive maps. Using these APIs in combination with the Leaflet JavaScript library enables easy and highly customizable map creation. The earthquake data was collected from the U.S. Geological Survey website containing information from earthquakes worldwide over the past week. This data was extracted and loaded as a GeoJSON file. The final map contained the earthquake data represented as circular markers with their size and color corresponding to the magnitude of the earthquake. Each marker also has a popup that displays the magnitude and location of the earthquake. The map also contains multiple viewing layers (i.e. satellite, street) and the ability to toggle visibility of the earthquake data. Finally, tectonic plate data was added to show the fault lines and their relationship to seismic activity.
                         </p>
                         <a class="btn btn-primary portfolio-modal-dismiss" href="#">
                             Live Demo
                         </a>
 
-                        <a class="btn btn-primary portfolio-modal-dismiss" href="#">
+                        <a class="btn btn-primary portfolio-modal-dismiss" href="https://github.com/peterg7/Mapping_Earthquakes_GISH">
                             View Code</a>
                     </div>
                 </div>
@@ -337,23 +327,18 @@
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-secondary text-uppercase mb-0">
-                            Project Name
+                            Mission to Mars
                         </h2>
                         <hr class="star-dark mb-5" />
                         <img class="img-fluid mb-5" src="img/portfolio/project3.jpg" alt="" />
                         <p class="mb-5">
-                            Lorem ipsum dolor sit amet, consectetur
-                            adipisicing elit. Mollitia neque assumenda ipsam
-                            nihil, molestias magnam, recusandae quos quis
-                            inventore quisquam velit asperiores, vitae?
-                            Reprehenderit soluta, eos quod consequuntur
-                            itaque. Nam.
+                            A friend is aspiring to work at NASA and study Mars and she spends much of her time looking at websites with news relating to Mars. In order to save time, she wants to write a script to collect the data from these websites and display it in a digestable manor. This will require scraping images and data from websites, storing the data, then uploading it to a webpage. Python was the coding language of choice with the use of BeautifulSoup, Spliner, Flask, and PyMongo to aid in scraping, data storage, and webpage development. 
                         </p>
                         <a class="btn btn-primary portfolio-modal-dismiss" href="#">
                             Live Demo
                         </a>
 
-                        <a class="btn btn-primary portfolio-modal-dismiss" href="#">
+                        <a class="btn btn-primary portfolio-modal-dismiss" href="https://github.com/peterg7/Mission_to_Mars_GISH">
                             View Code</a>
                     </div>
                 </div>
@@ -371,23 +356,18 @@
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-secondary text-uppercase mb-0">
-                            Project Name
+                            Pewlett Hackard Analysis
                         </h2>
                         <hr class="star-dark mb-5" />
                         <img class="img-fluid mb-5" src="img/portfolio/project4.jpg" alt="" />
                         <p class="mb-5">
-                            Lorem ipsum dolor sit amet, consectetur
-                            adipisicing elit. Mollitia neque assumenda ipsam
-                            nihil, molestias magnam, recusandae quos quis
-                            inventore quisquam velit asperiores, vitae?
-                            Reprehenderit soluta, eos quod consequuntur
-                            itaque. Nam.
+                            A company named Pewlett Hackard is offering retirement packages for those employees who meet a certain criteria. It's also looking forward and preparing for the next big wave of retirement. The task is to determine who will be retiring in the next 10 years and how many vacancies there will be. Using PosgresSQL, a list of retiring employees, totals for each job title, and potential mentors within the company were produced.
                         </p>
                         <a class="btn btn-primary portfolio-modal-dismiss" href="#">
                             Live Demo
                         </a>
 
-                        <a class="btn btn-primary portfolio-modal-dismiss" href="#">
+                        <a class="btn btn-primary portfolio-modal-dismiss" href="https://github.com/peterg7/Pewlett_Hackard_Analysis_GISH">
                             View Code</a>
                     </div>
                 </div>
@@ -405,23 +385,18 @@
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-secondary text-uppercase mb-0">
-                            Project Name
+                            UFO Sightings
                         </h2>
                         <hr class="star-dark mb-5" />
                         <img class="img-fluid mb-5" src="img/portfolio/project5.jpg" alt="" />
                         <p class="mb-5">
-                            Lorem ipsum dolor sit amet, consectetur
-                            adipisicing elit. Mollitia neque assumenda ipsam
-                            nihil, molestias magnam, recusandae quos quis
-                            inventore quisquam velit asperiores, vitae?
-                            Reprehenderit soluta, eos quod consequuntur
-                            itaque. Nam.
+                            Given a JavaScript file containing UFO sighting information, the task is to display the data as a table on a webpage. The page is to be interactive by providing the ability to filter sightings based on select criteria such as date of sighting, city, country, shape of object, etc. A combination of JavaScript, HTML, and CSS were used.
                         </p>
                         <a class="btn btn-primary portfolio-modal-dismiss" href="#">
                             Live Demo
                         </a>
 
-                        <a class="btn btn-primary portfolio-modal-dismiss" href="#">
+                        <a class="btn btn-primary portfolio-modal-dismiss" href="https://github.com/peterg7/UFOs_GISH">
                             View Code</a>
                     </div>
                 </div>
@@ -439,23 +414,18 @@
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-secondary text-uppercase mb-0">
-                            Project Name
+                            Movies ETL
                         </h2>
                         <hr class="star-dark mb-5" />
                         <img class="img-fluid mb-5" src="img/portfolio/project6.jpg" alt="" />
                         <p class="mb-5">
-                            Lorem ipsum dolor sit amet, consectetur
-                            adipisicing elit. Mollitia neque assumenda ipsam
-                            nihil, molestias magnam, recusandae quos quis
-                            inventore quisquam velit asperiores, vitae?
-                            Reprehenderit soluta, eos quod consequuntur
-                            itaque. Nam.
+                            Amazing Prime video, an online streaming service, has decided to sponser a Hackathon. Given a set of clean movie data, the task is to predict the popular films. The first step is to collect the data by extracting it from the web and then transform the data to be more usable. Finally, the data needs to be loaded into a SQL Database. Amazing Prime video wants to be able to have an autonomous ETL pipeline. The final task is to design a function that will perform the ETL process on the data. Python paired with Psycopg2 were used for this project.
                         </p>
                         <a class="btn btn-primary portfolio-modal-dismiss" href="#">
                             Live Demo
                         </a>
 
-                        <a class="btn btn-primary portfolio-modal-dismiss" href="#">
+                        <a class="btn btn-primary portfolio-modal-dismiss" href="https://github.com/peterg7/Movies_ETL_GISH">
                             View Code</a>
                     </div>
                 </div>
