--- a/templates/index.html
+++ b/templates/index.html
@@ -169,16 +169,16 @@
                         <i class="fab fa-html5 fa-3x"></i>
                     </div>
                     <div class="col">
-                        <i class="fab fa-css3-alt fa-3x"></i>
+                        <i class="fab fa-python fa-3x"></i>
                     </div>
                     <div class="col">
                         <i class="fab fa-js-square fa-3x"></i>
                     </div>
                     <div class="col">
-                        <i class="fab fa-node fa-3x"></i>
+                        <i class="fab fa-hackerrank fa-3x"></i>
                     </div>
                     <div class="col">
-                        <i class="fab fa-git fa-3x"></i>
+                        <i class="fab fa-github fa-3x"></i>
                     </div>
                 </div>
             </div>
